   prefixing the name of the hash at assignment with the appropriate number of
   underscores, just like variables.

Dialplan Variables
------------------
 * Added DYNAMIC_FEATURENAME which holds the last triggered dynamic feature.
 * Added DYNAMIC_PEERNAME which holds the unique channel name on the other side
   and is set when a dynamic feature is triggered.

Queue changes
-------------
  * A new config option, penaltymemberslimit, has been added to queues.conf.
    When set this option will disregard penalty settings when a queue has too
    few members.
  * A new option, 'I' has been added to both app_queue and app_dial.
    By setting this option, Asterisk will not update the caller with
    connected line changes or redirecting party changes when they occur.
  * A 'relative-peroidic-announce' option has been added to queues.conf.  When
    enabled, this option will cause periodic announce times to be calculated
    from the end of announcements rather than from the beginning.

mISDN channel driver (chan_misdn) changes
----------------------------------------
  * Added display_connected parameter to misdn.conf to put a display string
    in the CONNECT message containing the connected name and/or number if
    the presentation setting permits it.
  * Added display_setup parameter to misdn.conf to put a display string
    in the SETUP message containing the caller name and/or number if the
    presentation setting permits it.
  * Made misdn.conf parameters localdialplan and cpndialplan take a -1 to
    indicate the dialplan settings are to be obtained from the asterisk
    channel.
  * Made misdn.conf parameter callerid accept the "name" <number> format
    used by the rest of the system.
  * Made use the nationalprefix and internationalprefix misdn.conf
    parameters to prefix any received number from the ISDN link if that
    number has the corresponding Type-Of-Number.  NOTE:  This includes